fix(footer): fixed footer alignment

--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -57,6 +57,10 @@ footer ul {
   flex-direction: column;
   gap: 10px;
 }
+footer i {
+  width: 20px;
+  height: 20px;
+}
 footer a {
   text-decoration: none;
   color: #fff;
