--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -14,6 +14,12 @@ footer {
         @include flex(column);
         gap: 10px;
     }
+
+    i {
+        width: 20px;
+        height: 20px;
+    }
+
     a {
         text-decoration: none;
         color: $color-light;
